# portfolio

./: .gitignore  README.md  pyproject.toml
portfolio/: constants.py  contact.py  home.py  main.py  projects.py  services.py
portfolio/components/: card.py  navbar.py  project_card.py  service_card.py
portfolio/static/css/: main.css
