[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["abdelmalek0 <djamaa.abdelmalek98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-fasthtml = "^0.6.8"
uvicorn = "^0.30.6"
sqlite-minutils = "^4.0.3"
reorder-python-imports = "^3.14.0"
pre-commit = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"